# magic-link

./: Cargo.toml
src/: main.rs
static/: challenge.html  home.html  login.html
