[package]
name = "magic-link"
version = "0.1.0"
authors = ["kyle.smallwood@gmail.com <kyle.smallwood@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.19"
approveapi = "1.0.3"
failure = "0.1.5"
futures = "0.1.25"
base64 = "0.10.0"
actix = "0.7.9"
rand = "0.6.5"
cookie = "0.11.0"
lazy_static = "1.2.0"
handlebars = "1.1.0"
env_logger = "0.6.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"